# fashionoi

./: .gitignore  DATASET.md  README.md  pyproject.toml  requirements-faiss.txt  requirements.txt
evaluation/: curated_fashionpedia_1000.txt  judgments.template.json  queries.json
reports/: ablation_results.json  compliance_matrix.md  coverage_audit.json  dataset_profile.json  latency_benchmark.json  run_summary.json
scripts/: benchmark.py  build_report.py  compare_ablation.py  curate_dataset.py  evaluate.py  index.py  make_dataset_montage.py  make_evaluation_summary.py  profile_dataset.py  run_assignment.ps1  search.py  search_all.py
src/glance_retrieval/: __init__.py  contact_sheet.py  curation.py  dataset.py  encoder.py  evaluation.py  index_store.py  indexing.py  query.py  retrieval.py
tests/: test_curation.py  test_dataset.py  test_query.py  test_retrieval.py  test_store.py
